[gd_scene load_steps=6 format=2]

[ext_resource path="res://menus/play/Death.gd" type="Script" id=1]
[ext_resource path="res://assets/menus/death_background.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/dynamic/screen_title.tres" type="DynamicFont" id=3]
[ext_resource path="res://menus/buttons/MenuButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/menus/char.png" type="Texture" id=5]

[node name="Death" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.08111
margin_right = -4.08112
mouse_filter = 2
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 80.0
custom_constants/separation = 80

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 89.0
custom_fonts/font = ExtResource( 3 )
text = "VocÃªs morreram"
align = 1

[node name="Menu" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 169.0
margin_right = 1024.0
margin_bottom = 617.0
custom_constants/separation = 80
alignment = 1

[node name="CenterRow" type="HBoxContainer" parent="VBoxContainer/Menu"]
margin_right = 1024.0
margin_bottom = 182.0
alignment = 1

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer/Menu/CenterRow"]
margin_left = 330.0
margin_right = 693.0
margin_bottom = 182.0
custom_constants/separation = 80
alignment = 1

[node name="RetryButton" parent="VBoxContainer/Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_right = 363.0
margin_bottom = 51.0
custom_colors/font_color_disabled = Color( 0.32549, 0.32549, 0.32549, 1 )
custom_colors/font_color = Color( 0.756863, 0.380392, 0.380392, 1 )
custom_colors/font_color_pressed = Color( 1, 0.101961, 0.101961, 1 )
text = "Tentar novamente"
scene_to_load = "res://levels/NewMap01_12x16.tscn"

[node name="BackButton" parent="VBoxContainer/Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 131.0
margin_right = 363.0
margin_bottom = 182.0
custom_colors/font_color_disabled = Color( 0.32549, 0.32549, 0.32549, 1 )
custom_colors/font_color = Color( 0.756863, 0.380392, 0.380392, 1 )
custom_colors/font_color_pressed = Color( 1, 0.101961, 0.101961, 1 )
text = "Voltar"
scene_to_load = "res://menus/TitleScreen.tscn"

[node name="Char" type="TextureRect" parent="VBoxContainer/Menu"]
margin_top = 262.0
margin_right = 1024.0
margin_bottom = 448.0
texture = ExtResource( 5 )
stretch_mode = 4
[connection signal="focus_entered" from="VBoxContainer/Menu/CenterRow/Buttons/RetryButton" to="." method="_on_RetryButton_focus_entered"]
[connection signal="focus_entered" from="VBoxContainer/Menu/CenterRow/Buttons/BackButton" to="." method="_on_BackButton_focus_entered"]
